# gbemu

./: .gitignore  CMakeLists.txt  main.c
console/: CMakeLists.txt
console/include/: common.h  cpu.h  lcd.h  ppu.h  ppu_sm.h  ram.h  timer.h  ui.h
console/lib/: bus.c  cart.c  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  dma.c  emu.c  gamepad.c  instructions.c  interrupts.c  io.c  lcd.c  ppu.c  ppu_pipeline.c  ppu_sm.c  ram.c  stack.c  timer.c  ui.c
